paddle moving and communicating with websocket

--- a/srcs/backend/tournament/templates/tournament/pong_origin.html
+++ b/srcs/backend/tournament/templates/tournament/pong_origin.html
@@ -8,6 +8,7 @@
     <button id="tournamentSendButton">Test tournament message</button>
     <button id="gameSendButton">Test game message</button>
     <p id="messageDisplay"></p>
+    <canvas id="gameCanvas" width="800" height="600"></canvas>
     <h2 id="welcome"></h2>
 </body>
 </html>
