--- a/srcs/frontend/css/button.css
+++ b/srcs/frontend/css/button.css
@@ -17,6 +17,7 @@ button {
 
 .button--tertiary {
 	outline: 1px solid var(--text-color-main);
+	width: 100%;
 }
 
 .button--full-width {
@@ -55,4 +56,22 @@ button {
 
 .button-group--horizontal button {
 	height: 40px;
+}
+
+.cross-icon {
+	position: relative;
+	width: 10%;
+}
+
+.cross-icon::before, .cross-icon::after {
+	content: '';
+	position: absolute;
+	background-color: var(--text-color-main);
+	width: 100%;
+	height: 2px;
+	transform: translateY(-50%) rotate(45deg);
+}
+
+.cross-icon::after {
+	transform: translateY(-50%) rotate(-45deg);
 }
