add redirect for oauth

--- a/srcs/backend/accounts/templates/registration/form.html
+++ b/srcs/backend/accounts/templates/registration/form.html
@@ -16,15 +16,9 @@
 			</div>
 			<div class="form-error-message">
 			</div>
-			<div class="button-group--horizontal">
-					<button class="button--secondary button--with-icon">
-							<span class="font-size--xl">G</span>
-							LOGIN
-					</button>
-					<button class="button--secondary button--with-icon">
-							<img src="/img/42.png" alt="42 logo" class="fortytwo-icon" width="30" height="30">
-							<span>LOGIN</span>
-					</button>
-			</div>
+			<a id="login-42-url" href="{{ login_42_url }}">
+				<img src="/img/42.png" alt="42 logo" class="fortytwo-icon" width="30" height="30">
+				<span>LOGIN</span>
+			</a>
 	</div>
 </section>
