handle oauth error, refactor

--- a/srcs/backend/accounts/templates/registration/oauth_error.html
+++ b/srcs/backend/accounts/templates/registration/oauth_error.html
@@ -1,2 +1,2 @@
-<p>error</p>
-<button>go to login page</button>
+<p style="margin-bottom: 1em;">42 Authorization Error</p>
+<button class="button--primary" onclick="navigate('/')">Back to Homepage</button>
