--- a/srcs/backend/tournament/templates/tournament/tournament_lobby.html
+++ b/srcs/backend/tournament/templates/tournament/tournament_lobby.html
@@ -1,5 +1,5 @@
 <section id="tournament-lobby-section" class="{% if players_in_lobby|length == num_players %}full{% endif %} {% if num_players == 2 %}two-players{% endif %}">
-  {% if players_in_lobby|length < num_players %}
+  <!-- {% if players_in_lobby|length < num_players %}
     <h1 class="tournament_lobby__header">BEEPONG CUP</h1>
     <p class="tournament_lobby__description font--alt font-size--sm">The mighty Pong contest for the best of the best bees!</p>
     <p class="tournament_lobby__player-count"><span id="num-players-in-lobby">{{ players_in_lobby|length }}</span>/<span id="num-players">{{ num_players }}</span> PLAYERS</p>
@@ -8,8 +8,9 @@
     {% if match_players|length == 2 %}
     <p class="tournament_lobby__description font--alt font-size--sm">{{ match_players.0 }} vs {{ match_players.1 }}</p>
     {% endif %}
-  {% endif %}
-  <div class="tournament_lobby__name-list-container">
+  {% endif %} -->
+  <canvas id="gameCanvas" width="800" height="500"></canvas>
+  <!-- <div class="tournament_lobby__name-list-container">
     {% for player in players_in_lobby %}
     <div class="tournament_lobby__name-container">
       <div class="tournament_lobby__name">{{ player }}</div>
@@ -22,5 +23,5 @@
     <div class="cross-icon"></div>
     <span>LEAVE TOURNAMENT</span>
   </button>
-  {% endif %}
+  {% endif %} -->
 </section>
