--- a/srcs/backend/beePong/templates/beePong/home.html
+++ b/srcs/backend/beePong/templates/beePong/home.html
@@ -11,10 +11,10 @@
 					<span class="button__text">TOURNAMENT</span>
 					<img src="/img/arrow.svg" alt="arrow" class="arrow-icon">
 				</button>
-				<button class="button--secondary button--with-icon button--full-width" onclick="navigate(`{% url 'beePong:game' %}`)">
+				<!-- <button class="button--secondary button--with-icon button--full-width" onclick="navigate(`{% url 'tournament:solo_game' %}`)">
 					<span class="button__text">SOLO GAME</span>
 					<img src="/img/arrow.svg" alt="arrow" class="arrow-icon">
-				</button>
+				</button> -->
 			</div>
 		</div>
 		<p class="font--alt font-size--sm">*created by 5 ultra talanted Hive Helsinki students. Tech stuff here -></p>
