--- a/srcs/backend/tournament/templates/tournament/tournament_lobby.html
+++ b/srcs/backend/tournament/templates/tournament/tournament_lobby.html
@@ -9,6 +9,10 @@
     <p class="tournament_lobby__description font--alt font-size--sm">{{ match_players.0 }} vs {{ match_players.1 }}</p>
     {% endif %}
   {% endif %} -->
+  <div class="game-info__container">
+    <div id="score-player1" class="score">0</div>
+    <div id="score-player2" class="score">0</div>
+  </div>
   <canvas id="gameCanvas" width="800" height="500"></canvas>
   <!-- <div class="tournament_lobby__name-list-container">
     {% for player in players_in_lobby %}
