--- a/srcs/frontend/css/tournament_lobby.css
+++ b/srcs/frontend/css/tournament_lobby.css
@@ -121,3 +121,11 @@ section.full .tournament_lobby__name-container:nth-child(3)::before {
   border-bottom-left-radius: 10em;
   top: -10px;
 }
+
+.game-info__container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
