add players vvagapov and dummy to the game, testing remove connection

--- a/srcs/backend/tournament/templates/tournament/pong.html
+++ b/srcs/backend/tournament/templates/tournament/pong.html
@@ -4,6 +4,6 @@
     <title>Pong Game</title>
 </head>
 <body>
-    <canvas id="gameCanvas" width="800" height="500"></canvas>
+    <canvas id="game_canvas" width="800" height="500"></canvas>
 </body>
 </html>
