--- a/srcs/backend/tournament/templates/tournament/tournament_lobby.html
+++ b/srcs/backend/tournament/templates/tournament/tournament_lobby.html
@@ -13,7 +13,7 @@
     <div id="score-player1" class="score">0</div>
     <div id="score-player2" class="score">0</div>
   </div>
-  <canvas id="gameCanvas" width="800" height="500"></canvas>
+  <canvas id="game_canvas" width="800" height="500"></canvas>
   <!-- <div class="tournament_lobby__name-list-container">
     {% for player in players_in_lobby %}
     <div class="tournament_lobby__name-container">
