--- a/srcs/backend/tournament/templates/tournament/solo_game.html
+++ b/srcs/backend/tournament/templates/tournament/solo_game.html
@@ -1,2 +1,2 @@
 <h1>solo game</h1>
-<canvas id="gameCanvas" width="800" height="500"></canvas>
+<canvas id="game_canvas" width="800" height="500"></canvas>
