--- a/srcs/backend/accounts/templates/registration/form_error.html
+++ b/srcs/backend/accounts/templates/registration/form_error.html
@@ -1,2 +1,2 @@
-<p style="margin-bottom: 1em;">42 Authorization Error</p>
+<p style="margin-bottom: 1em;">{{ error_message }}</p>
 <button class="button--primary" onclick="navigate('/')">Back to Homepage</button>
