--- a/srcs/frontend/css/navbar.css
+++ b/srcs/frontend/css/navbar.css
@@ -1,5 +1,5 @@
 nav {
-	padding: 0.5em 1.5em;
+	padding: 1.3em 2.5em;
   display: flex;
   justify-content: space-between;
 	align-items: center;
@@ -9,8 +9,15 @@ nav ul {
 	display: flex;
 	align-items: center;
 	list-style-type: none;
+	gap: 3em;
 }
 
-nav li {
-	margin-left: 2em;
+#navbar-user-actions {
+	display: flex;
+	align-items: center;
+	gap: 2em;
+}
+
+#username svg {
+	margin-right: 0.3em;
 }
