refactor card and button css, refactor home.html

--- a/srcs/backend/tournament/templates/tournament/tournament.html
+++ b/srcs/backend/tournament/templates/tournament/tournament.html
@@ -27,7 +27,7 @@
 							{{ tournament.state }}
 						</div>
 					</div>
-					<div class="card__text font--alt font-size--sm">
+					<div class="card__text font--alt">
 						<p>{{ tournament.description }}</p>
 						<p class="tournament__num_players">{{ tournament.players|length }}/{{ tournament.num_players }}</p>
 						{% for player in tournament.players %}
