--- a/srcs/backend/beePong/templates/beePong/home.html
+++ b/srcs/backend/beePong/templates/beePong/home.html
@@ -2,21 +2,23 @@
 	<div class="card__container">
 		<div class="card">
 			<div class="card__content">
-				<h2 class="card__title">WHAT'S THIS?</h2>
-				<div class="card__text font--alt font-size--sm">
+				<h1 class="card__title">WHAT'S THIS?</h2>
+				<div class="card__text">
 					<p>The mighty Pong contest!*</p>
 					<p>Play solo against our vicious AI or gather friends and let the tournament decide who's the queen bee 🐝</p>
 				</div>
-				<button class="button--primary button--with-icon button--full-width" onclick="navigate(`{% url 'tournament:tournament' %}`, '/tournament')">
-					<span class="button__text">TOURNAMENT</span>
-					<img src="/img/arrow.svg" alt="arrow" class="arrow-icon">
-				</button>
-				<button class="button--secondary button--with-icon button--full-width" onclick="navigate(`{% url 'beePong:game' %}`)">
-					<span class="button__text">SOLO GAME</span>
-					<img src="/img/arrow.svg" alt="arrow" class="arrow-icon">
-				</button>
+				<div class="button-group--column">
+					<button class="button--primary button--with-icon" onclick="navigate(`{% url 'tournament:tournament' %}`, '/tournament')">
+						TOURNAMENT
+						<img src="/img/arrow.svg" alt="arrow" width="21" height="12">
+					</button>
+					<button class="button--secondary button--with-icon" onclick="navigate(`{% url 'beePong:game' %}`)">
+						SOLO GAME
+						<img src="/img/arrow.svg" alt="arrow" width="21" height="12">
+					</button>
+				</div>
 			</div>
 		</div>
-		<p class="font--alt font-size--sm">*created by 5 ultra talanted Hive Helsinki students. Tech stuff here -></p>
+		<p class="card__note">*created by 5 ultra talented Hive Helsinki students. Tech stuff here -></p>
 	</div>
 </section>
