--- a/srcs/backend/tournament/templates/tournament/tournament.html
+++ b/srcs/backend/tournament/templates/tournament/tournament.html
@@ -54,7 +54,7 @@
 							</button>
 						</div>
 					</form>
-					<div class="form-error-message">
+					<div class="form__error-message">
 					</div>  
 					{% endif %}
 				</div>
