--- a/srcs/backend/accounts/templates/registration/form.html
+++ b/srcs/backend/accounts/templates/registration/form.html
@@ -3,19 +3,20 @@
 		<div class="card">
 			<div class="card__content">
 				<h1 class="card__title">{{ form_title }}</h1>
-				<form onsubmit=handleFormSubmit(event) action="{{ form_action }}">
+				<form onsubmit="handleFormSubmit(event)" action="{{ form_action }}">
 					{% csrf_token %}
 					{{ form.as_div }}
 					<input type="hidden" id="redirectUrl" name="redirect_url" value="/"/>
-					<div class="form-actions">
+					<div class="form__actions">
 						<button type="submit" class="button--primary">{{ form_button_text }}</button>
-						<a href="{{ alt_action_url }}" class="font-size--xs" onclick="navigate(event, document.getElementById('redirectUrl').value)">{{ alt_action }}</a>
+						<a href="{{ alt_action_url }}" class="form__alt-action" onclick="navigate(event, document.getElementById('redirectUrl').value)">
+							{{ alt_action }}
+						</a>
 					</div>
 				</form>   
 			</div>
 		</div>
-		<div class="form-error-message">
-		</div>
+		<div class="form__error-message"></div>
 		<a id="login-42-url" href="{{ login_42_url }}">
 			<img src="/img/42.png" alt="42 logo" class="fortytwo-icon" width="30" height="30">
 			<span>LOGIN</span>
