--- a/srcs/backend/tournament/templates/tournament/create_tournament.html
+++ b/srcs/backend/tournament/templates/tournament/create_tournament.html
@@ -1,45 +1,44 @@
 <section>
 	<div class="card__container">
-			<div class="card">
-					<div class="card__content">
-							<h1 class="card__title">NEW TOURNAMENT</h1>
-							<form onsubmit=handleFormSubmit(event) action="{{ form_action }}">
-									{% csrf_token %}
-									<div>
-											<label for="id_title">Title</label>
-											{{ form.title }}
-									</div>
-									<div>
-											<label for="id_description">Description</label>
-											{{ form.description }}
-									</div>
-									<div>
-											<label for="id_title">Number of players</label>
-											<div class="radio-group" id="id_title">
-													{% for id, label in form.num_players.field.choices %}
-													<div>
-													<input
-															type="radio"
-															id="id_num_players_{{ forloop.counter0 }}"
-															name="num_players"
-															value="{{ id }}"
-															class="radio-input"
-															{% if forloop.first %} checked {% endif %}
-													>
-													<label class="radio-label" for="id_num_players_{{ forloop.counter0 }}">
-															<span>{{ label }}</span>
-													</label>
-													</div>
-													{% endfor %}
-											</div>
-									</div>
-									<div class="form-actions">
-										<button type="submit" class="button--primary">CREATE</button>
-									</div>
-							</form>   
+		<div class="card">
+			<div class="card__content">
+				<h1 class="card__title">NEW TOURNAMENT</h1>
+				<form onsubmit=handleFormSubmit(event) action="{{ form_action }}">
+					{% csrf_token %}
+					<div>
+						<label for="id_title">Title</label>
+						{{ form.title }}
 					</div>
+					<div>
+						<label for="id_description">Description</label>
+						{{ form.description }}
+					</div>
+					<div>
+						<label for="id_num_players">Number of players</label>
+						<div class="radio-group" id="id_num_players">
+							{% for id, label in form.num_players.field.choices %}
+							<div>
+								<input
+										type="radio"
+										id="id_num_players_{{ forloop.counter0 }}"
+										name="num_players"
+										value="{{ id }}"
+										class="radio-input"
+										{% if forloop.first %} checked {% endif %}
+								>
+								<label class="radio-label" for="id_num_players_{{ forloop.counter0 }}">
+										<span>{{ label }}</span>
+								</label>
+							</div>
+							{% endfor %}
+						</div>
+					</div>
+					<div class="form__actions">
+						<button type="submit" class="button--primary">CREATE</button>
+					</div>
+				</form>   
 			</div>
-			<div class="form-error-message">
-			</div>
+		</div>
+		<div class="form__error-message"></div>
 	</div>
 </section>
