refactor tournament page

--- a/srcs/backend/accounts/templates/registration/form.html
+++ b/srcs/backend/accounts/templates/registration/form.html
@@ -1,6 +1,6 @@
 <section>
 	<div class="card__container">
-		<div class="card">
+		<div class="card card--active">
 			<div class="card__content">
 				<h1 class="card__title">{{ form_title }}</h1>
 				<form onsubmit="handleFormSubmit(event)" action="{{ form_action }}">
