--- a/srcs/backend/tournament/templates/tournament/tournament.html
+++ b/srcs/backend/tournament/templates/tournament/tournament.html
@@ -7,65 +7,61 @@
 	<div class="tournament__grid">
 		{% for tournament in tournaments %}
 		<div class="card__container">
-			<div class="
+			<div class="card
 				{% if tournament.state == 'NEW' %}
-				 card
+					card--active
 				{% else %}
 					card--inactive
 				{% endif %}">
 				<div class="card__content">
 					<div class="card__title tournament__container">
-						<h2>{{ tournament.name }}</h2>
-						<div class="tournament__state
-							{% if tournament.state == 'NEW' %}
-								tournament__state--new
-							{% elif tournament.state == 'PLAYING' %}
-								tournament__state--playing
-							{% else %}
-								tournament__state--finished
-							{% endif %}">
+						<div class="tournament__name">
+							{{ tournament.name }}
+						</div>
+						<div class="tournament__state tournament__state--{{ tournament.state|lower }}">
 							{{ tournament.state }}
 						</div>
 					</div>
 					<div class="card__text font--alt">
 						<p>{{ tournament.description }}</p>
-						<p class="tournament__num_players">{{ tournament.players|length }}/{{ tournament.num_players }}</p>
+						<p class="tournament__num_players {% if tournament.players|length < tournament.num_players %} tournament__num_players--not_full{% endif %}">
+							{{ tournament.players|length }}/{{ tournament.num_players }}
+						</p>
 						{% for player in tournament.players %}
-							<p>
+							<p class="{% if player == tournament.winner %}tournament__winner{% endif %}">
 								{{ player }}
 								{% if player == tournament.winner %}
-										<span>👑</span>
-								{% endif %}
+									<span> 👑</span>
+									{% endif %}
 							</p>
 						{% endfor %}
 					</div>
 					{% if tournament.state == 'NEW' %}
-					<form onsubmit=handleFormSubmit(event) action="{{ form_action }}">
+					<form onsubmit="handleFormSubmit(event)" action="{{ form_action }}">
 						{% csrf_token %}
 						<input type="hidden" name="tournament_id" value="{{ tournament.tournament_id }}">
 						<div class="form__input-button-container">
-							<div class="form__input-container">
+							<div>
 								<label for="id_alias">Alias</label>
 								{{ form.alias }}
 							</div>
 							<button type="submit" class="button--primary button--with-icon">
 								<span class="button__text">JOIN</span>
-								<img src="/img/arrow.svg" alt="arrow" class="arrow-icon">
+								<img src="/img/arrow.svg" alt="arrow" width="21" height="12">
 							</button>
 						</div>
 					</form>
-					<div class="form__error-message">
-					</div>  
+					<div class="form__error-message"></div>  
 					{% endif %}
 				</div>
 			</div>
 		</div>
 		{% empty %}
 		<div class="card__container">
-			<div class="card--empty">
-					<div class="card__content">
-						YOUR AWESOME TOURNAMENT WILL BE HERE
-					</div>
+			<div class="card card--empty">
+				<div class="card__content">
+					YOUR AWESOME TOURNAMENT WILL BE HERE
+				</div>
 			</div>
 		</div>
 		{% endfor %}
