--- a/srcs/backend/beePong/templates/beePong/home.html
+++ b/srcs/backend/beePong/templates/beePong/home.html
@@ -1,6 +1,6 @@
 <section>
 	<div class="card__container">
-		<div class="card">
+		<div class="card card--active">
 			<div class="card__content">
 				<h1 class="card__title">WHAT'S THIS?</h1>
 				<div class="card__text">
