--- a/srcs/backend/tournament/templates/tournament/create_tournament.html
+++ b/srcs/backend/tournament/templates/tournament/create_tournament.html
@@ -1,6 +1,6 @@
 <section>
 	<div class="card__container">
-		<div class="card">
+		<div class="card card--active">
 			<div class="card__content">
 				<h1 class="card__title">NEW TOURNAMENT</h1>
 				<form onsubmit=handleFormSubmit(event) action="{{ form_action }}">
