--- a/srcs/backend/tournament/templates/tournament/tournament_winner.html
+++ b/srcs/backend/tournament/templates/tournament/tournament_winner.html
@@ -1,5 +1,5 @@
 <section id="tournament-lobby-section" class="full winner {% if num_players == 2 %}two-players{% endif %}">
-  <h1 class="tournament_lobby__header">BEEPONG CUP'S QUEEN BEE IS...</h1>
+  <h1 class="tournament_lobby__header tournament_lobby__header--winner">BEEPONG CUP'S QUEEN BEE IS...</h1>
 	
 	{% include 'tournament/tournament_name_list.html' %}
 	
