--- a/srcs/backend/tournament/templates/tournament/tournament.html
+++ b/srcs/backend/tournament/templates/tournament/tournament.html
@@ -1,7 +1,10 @@
 <section>
 	<div class="tournament__container">
 		<h1>TOURNAMENTS</h1>
-		<button class="button--primary" onclick="navigate(`{% url 'tournament:create_tournament' %}`)">+ NEW</button>
+		<button class="button--primary button--with-icon" onclick="navigate(`{% url 'tournament:create_tournament' %}`)">
+			<div class="plus-icon"></div>
+			<span>NEW</span>
+		</button>
 	</div>
 
 	<div class="tournament__grid">
