--- a/srcs/backend/tournament/templates/tournament/tournament_full_lobby.html
+++ b/srcs/backend/tournament/templates/tournament/tournament_full_lobby.html
@@ -4,7 +4,8 @@
   {% else %}
     <h1 class="tournament_lobby__header">BEEPONG CUP IS STARTING IN <span id="countdown">3</span>...</h1>
   {% endif %}
-  <p class="tournament_lobby__description font--alt font-size--sm">{{ match_players.0 }} vs {{ match_players.1 }}</p>
+  <p class="tournament_lobby__description font--alt">{{ match_players.0 }} vs {{ match_players.1 }}</p>
   
   {% include 'tournament/tournament_name_list.html' %}
+
 </section>
