--- a/srcs/backend/tournament/templates/tournament/tournament_waiting_lobby.html
+++ b/srcs/backend/tournament/templates/tournament/tournament_waiting_lobby.html
@@ -1,6 +1,6 @@
 <section id="tournament-lobby-section" class="{% if num_players == 2 %}two-players{% endif %}">
   <h1 class="tournament_lobby__header">BEEPONG CUP</h1>
-  <p class="tournament_lobby__description font--alt font-size--sm">The mighty Pong contest for the best of the best bees!</p>
+  <p class="tournament_lobby__description font--alt">The mighty Pong contest for the best of the best bees!</p>
   <p class="tournament_lobby__player-count"><span id="num-players-in-lobby">{{ players_in_lobby|length }}</span>/<span id="num-players">{{ num_players }}</span> PLAYERS</p>
   <div class="tournament_lobby__name-list-container">
     {% for player in players_in_lobby %}
