--- a/srcs/frontend/css/button.css
+++ b/srcs/frontend/css/button.css
@@ -50,6 +50,24 @@ button {
 	transform: translateY(-50%) rotate(-45deg);
 }
 
+.plus-icon {
+	position: relative;
+	width: 16px;
+	margin-right: 0.5em;
+}
+
+.plus-icon::before, .plus-icon::after {
+	content: '';
+	position: absolute;
+	background-color: var(--text-color-alt);
+	width: 100%;
+	height: 1px;
+}
+
+.plus-icon::after {
+	transform: translateY(-50%) rotate(90deg);
+}
+
 .button-group--column {
   display: flex;
   flex-direction: column;
