--- a/srcs/frontend/css/tournament_lobby.css
+++ b/srcs/frontend/css/tournament_lobby.css
@@ -1,6 +1,11 @@
+.tournament_lobby__header--winner {
+  margin-bottom: 2.5em;
+}
+
 .tournament_lobby__description {
   margin-top: 1.5em;
-  margin-bottom: 3em;
+  margin-bottom: 4em;
+  font-size: var(--font-size-sm);
 }
 
 .tournament_lobby__player-count {
