--- a/srcs/backend/tournament/templates/tournament/tournament.html
+++ b/srcs/backend/tournament/templates/tournament/tournament.html
@@ -1,5 +1,5 @@
 <section>
-	<div class="tournament__container">
+	<div id="tournament-header" class="tournament__container">
 		<h1>TOURNAMENTS</h1>
 		<button class="button--primary button--with-icon" onclick="navigate(`{% url 'tournament:create_tournament' %}`)">
 			<div class="plus-icon"></div>
