--- a/srcs/frontend/css/tournament.css
+++ b/srcs/frontend/css/tournament.css
@@ -52,8 +52,18 @@
 	color: var(--color-primary);
 }
 
-@media (max-width: 900px) {
-  .tournament__grid {
-    grid-template-columns: 1fr;
+@media (max-width: 800px) {
+	.tournament__grid {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+		gap: 1em;
   }
+
+	#tournament-header {
+		flex-direction: column;
+		align-items: center;
+		margin-bottom: 1.5em;
+		gap: 0.8em;
+	}
 }
