--- a/srcs/frontend/css/tournament_lobby.css
+++ b/srcs/frontend/css/tournament_lobby.css
@@ -131,3 +131,9 @@ section.full .tournament_lobby__name-container:nth-child(3)::before {
   border-bottom-left-radius: 10em;
   top: -10px;
 }
+
+@media (max-width: 700px) {
+	section.full .tournament_lobby__name-list-container {
+    transform: translateX(50px);
+  }
+}
