asunc issues on receiving message unresolved still.

--- a/srcs/backend/tournament/templates/tournament/tournament_waiting_lobby.html
+++ b/srcs/backend/tournament/templates/tournament/tournament_waiting_lobby.html
@@ -10,6 +10,11 @@
     </div>
     {% endfor %}
   </div>
+  <div class="game-info__container">
+    <div id="score-player1" class="score">0</div>
+    <div id="score-player2" class="score">0</div>
+  </div>
+  <canvas id="game_canvas" width="800" height="500"></canvas>
   <button id="leave-button" class="button--tertiary button--with-icon" onclick="navigate('/')">
     <div class="cross-icon"></div>
     <span>LEAVE TOURNAMENT</span>
