--- a/srcs/backend/tournament/templates/tournament/tournament_full_lobby.html
+++ b/srcs/backend/tournament/templates/tournament/tournament_full_lobby.html
@@ -7,4 +7,9 @@
   <p class="tournament_lobby__description font--alt font-size--sm">{{ match_players.0 }} vs {{ match_players.1 }}</p>
   
   {% include 'tournament/tournament_name_list.html' %}
+  <div class="game-info__container">
+    <div id="score-player1" class="score">0</div>
+    <div id="score-player2" class="score">0</div>
+  </div>
+  <canvas id="game_canvas" width="800" height="500"></canvas>
 </section>
