--- a/srcs/backend/accounts/templates/registration/form.html
+++ b/srcs/backend/accounts/templates/registration/form.html
@@ -17,9 +17,9 @@
 			</div>
 		</div>
 		<div class="form__error-message"></div>
-		<a id="login-42-url" href="{{ login_42_url }}">
-			<img src="/img/42.png" alt="42 logo" class="fortytwo-icon" width="30" height="30">
-			<span>LOGIN</span>
+		<a id="login-42-url" href="{{ login_42_url }}" class="button--tertiary button--fortytwo">
+			<span>SIGN IN WITH</span>
+			<img src="/img/42.png" alt="42 logo" width="30" height="30">
 		</a>
 	</div>
 </section>
