--- a/srcs/backend/beePong/templates/beePong/home.html
+++ b/srcs/backend/beePong/templates/beePong/home.html
@@ -19,6 +19,6 @@
 				</div>
 			</div>
 		</div>
-		<p class="card__note">*created by 5 ultra talented Hive Helsinki students. Tech stuff here -></p>
+		<p class="card__note">*created by 5 ultra talented Hive Helsinki students. Tech stuff <a id="github-link" href="https://github.com/BeePong/42_transcendence">here -></a></p>
 	</div>
 </section>
