--- a/srcs/frontend/css/card.css
+++ b/srcs/frontend/css/card.css
@@ -1,12 +1,17 @@
 .card__container {
   width: 330px;
   margin-top: 2em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2em;
 }
 
 .card {
   overflow: hidden;
   min-height: 330px;
   height: 100%;
+  width: 100%;
 }
 
 .card--active {
@@ -41,15 +46,14 @@
 }
 
 .card__note {
-  margin-top: 2.5em;
   font-size: var(--font-size-sm);
   font-family: var(--font-family-alt);
   font-variation-settings: "YOPQ" 300;
+  width: 90%;
 }
 
 @media (max-width: 700px) {
   .card__container {
     width: 300px;
-    margin-top: 2em;
   }
 }
